--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habitica To-Do List</title>
+    <title>Task Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Habitica To-Do List</h1>
+        <h1>Task Tracker</h1>
     </header>
     <div class="container">
         
