--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     </div>
     <footer>
-        <p>&copy; made with <i class="fas fa-heart"></i> by <span> Nishu Priya </span>.</p>
+        <p>&copy; made by <span> Nishu Priya </span>.</p>
     </footer>
     <script src="script.js"></script>
 </body>
